--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,10 @@ html {
   scroll-behavior: smooth;
 }
 
+h2 {
+  font-weight: bolder;
+}
+
 @media(max-width: 1070px) {
   h1 {
     font-size: 2.2rem;
