--- a/src/AppComponents/css/Card.css
+++ b/src/AppComponents/css/Card.css
@@ -2,9 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 336px;
-
     height: 380px;
-
     border-color: #Fff;
     border-radius: 25px;
     background-color: #ffffff;
@@ -42,20 +40,26 @@
     justify-content: center;
     align-items: center;
     font-weight: bold;
-    max-width: 112px;
     width: 100%;
     background-color: #fff;
 }
 
-/* Shared styles for the card footer */
 .card-footer {
     display: flex;
     max-height: 60px;
     height: 100%;
     border-top: 1px solid #E4E4E4;
+    width: 100%;
 }
 
-/* Classes to handle rounded corners */
+.detail-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60px;
+    width: 112px;
+}
+
 .rounded-bottom-left {
     border-bottom-left-radius: 25px;
 }
